mise a jour par khalil reverse xml

--- a/src/Admin/AdminBundle/Resources/config/routing.yml
+++ b/src/Admin/AdminBundle/Resources/config/routing.yml
@@ -9,3 +9,9 @@ admin_admin_homepage:
 admin_admin_morris:
     pattern:  /Admin/morris
     defaults: { _controller: AdminAdminBundle:Default:morris }
+
+
+
+admin_admin_client:
+    pattern:  /Admin/client
+    defaults: { _controller: AdminAdminBundle:Default:client }
