Creation Admin Bundle et ajout des fichier CSS et JS et html correspondants

--- a/src/Admin/AdminBundle/Resources/config/routing.yml
+++ b/src/Admin/AdminBundle/Resources/config/routing.yml
@@ -20,7 +20,7 @@ admin_admin_prest:
     pattern:  /Admin/prestataire
     defaults: { _controller: AdminAdminBundle:Default:prestataire }
 
-admin_admin_prest:
+admin_admin_deal:
     pattern:  /Admin/deal
     defaults: { _controller: AdminAdminBundle:Default:deal }
     
