--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -45,6 +45,8 @@ security:
             form_login:
                 login_path: fos_user_security_login
                 check_path: fos_user_security_check
+                success_handler: ccdn_user_security.component.authentication.handler.login_Success_handler
+                failure_path: /login
             logout:
                 path:       fos_user_security_logout
                 target:     /login
